@@ -18,13 +18,16 @@
 package org.jzy3d.demos;
 
 import java.util.Random;
+
 import org.jzy3d.chart.Chart;
-import org.jzy3d.chart.factories.PanamaGLJavaFXChartFactory;
+import org.jzy3d.chart.factories.ChartFactory;
+import org.jzy3d.chart.factories.PanamaGLJavaFXPainterFactory;
 import org.jzy3d.colors.Color;
 import org.jzy3d.maths.Coord3d;
 import org.jzy3d.plot3d.primitives.Scatter;
 import org.jzy3d.plot3d.rendering.canvas.PanamaGLJavaFXCanvas;
 import org.jzy3d.plot3d.rendering.canvas.Quality;
+
 import javafx.application.Application;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
@@ -36,6 +39,9 @@ import javafx.stage.Stage;
  *
  * @author Martin Pernollet
  */
+//--module-path /Library/Java/JavaVirtualMachines/javafx-sdk-19.0.2.1/lib --add-modules javafx.controls --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+//--module-path /Users/martin/Dev/javafx-sdk-17/lib --add-modules javafx.controls --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+//--module-path "C:\Program Files\Java\javafx-sdk-17.0.6\lib"  --add-modules javafx.controls --add-exports=java.desktop/sun.awt=ALL-UNNAMED
 public class ScatterDemo_PanamaGL_JavaFX {
   static final float ALPHA_FACTOR = 0.25f;
 
@@ -46,7 +52,7 @@ public class ScatterDemo_PanamaGL_JavaFX {
   public static class App extends Application {
     @Override
     public void start(Stage stage) {
-      PanamaGLJavaFXChartFactory factory = new PanamaGLJavaFXChartFactory();
+      ChartFactory factory = new ChartFactory(new PanamaGLJavaFXPainterFactory());
 
       Quality q = Quality.Advanced().setAnimated(false);
       Chart chart = factory.newChart(q);
